--- a/notes/miaomiaohouse_notes/小鼠项目笔记.md
+++ b/notes/miaomiaohouse_notes/小鼠项目笔记.md
@@ -1,4 +1,4 @@
-# 项目初期：3月15日-
+# 第一阶段：3月15日-3月26日
 
 最开始接触项目的时候得知的情况是：收集到了小鼠数据，对于小鼠数据进行标注，而后放进模型进行训练即可。因此对于数据进行处理和清洗。
 
@@ -10,7 +10,7 @@
 
 找到一个较为好用的软件叫做vott，是微软开发的，但是现在已经停止更新维护了。不过仍然能用。开始是用的这个软件进行标注的，结果是voc格式，需要进行进一步转换成yolo格式。
 
-第一阶段的图像良莠不齐，差距很大，质量的差距主要体现在：图像分辨率、视野中老鼠毛色、视野中老鼠数量、摄像头偏移角度。下面是第一阶段的数据的几个示例。
+刚开始的图像良莠不齐，差距很大，质量的差距主要体现在：图像分辨率、视野中老鼠毛色、视野中老鼠数量、摄像头偏移角度。下面是初期的数据的几个示例。
 
 ![](pics\stage1pic1.png)
 
@@ -72,6 +72,16 @@
 
 ![](pics\chat8.png)
 
+整个项目到这里陷入到了一种无法继续的状态，现在的情况就是我知道现在的数据和算法就是一坨史，老哥知道现在的数据和算法就是一坨史，经理不知道，老板不知道，不仅不知道，还似乎对于我们有种不切实际的幻想。
+
+但是老板也有在努力，还在群里发了些资料。说实话，我是浅浅读了这些资料之后才开始对于我们目前做的东西到底有多史有一些了解，从这里开始，我对这个项目的了解基本进入了第二阶段。
+
+![](pics\chat9.png)
+![](pics\chat10.png)
+![](pics\chat11.png)
+![](pics\chat12.png)
+
+# 第二阶段：3月27日-
 
 
 
